5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1637_2443.log
== TEST (2019-04-11 10:59:33) 
-- CODE:
from math import*
r=float(input("raio do tanque: "))
a=float(input("altura: "))
x=float(input("opcao: (1/2)"))
v1=(4*pi*r**3)/3
v2= (pi*a**2 * (3*r-a))/3

if(x=="1"):
	print(v1)
else:
	print(v2)

-- OUTPUT:
9.025664794069577
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:01:03) 
-- CODE:
from math import*
r=float(input("raio do tanque: "))
a=float(input("altura: "))
x=float(input("opcao: (1/2)"))
v1=(4*pi*r**3)/3
v2= (pi*a**2 * (3*r-a))/3

if(x=="1"):
	print(round(v1,2)
else:
	print(round(v2,2)

-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:01:17) 
-- CODE:
from math import*
r=float(input("raio do tanque: "))
a=float(input("altura: "))
x=float(input("opcao: (1/2)"))
v1=(4*pi*r**3)/3
v2= (pi*a**2 * (3*r-a))/3

if(x=="1"):
	print(round(v1,2))
else:
	print(round(v2,2))

-- OUTPUT:
9.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:02:11) 
-- CODE:
from math import*
r=float(input("raio do tanque: "))
a=float(input("altura: "))
x=float(input("opcao: "))
v1=(4*pi*r**3)/3
v2= (pi*a**2 * (3*r-a))/3

if(x=="1"):
	print(round(v1,2))
else:
	print(round(v2,2))

-- OUTPUT:
9.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:02:57) 
-- CODE:
from math import*
r=float(input("raio do tanque: "))
a=float(input("altura: "))
x=float(input("opcao: "))
v1=(4*pi*r**3)/3
v2= (pi * (a)**2 * (3*r-a))/3

if(x=="1"):
	print(round(v1,2))
else:
	print(round(v2,2))

-- OUTPUT:
9.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:04:24) 
-- CODE:
from math import*
r=float(input("raio do tanque: "))
a=float(input("altura: "))
x=int(input("opcao: "))
v1=(4*pi*r**3)/3
v2= (pi * (a)**2 * (3*r-a))/3

if(x== 1):
	print(round(v1,2))
else:
	print(round(v2,2))

-- OUTPUT:
179.59
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:09:01) 
-- CODE:
from math import*
r=float(input("raio do tanque: "))
a=float(input("altura: "))
x=int(input("opcao: "))
v1=(4*pi*r**3)/3
v2= (pi * (a)**2 * (3*r-a))/3

if(x== 1):
	print(round(v2,2))
else:
	print(round(v1-v2,2))

-- OUTPUT:
9.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:09:48) 
-- CODE:
from math import*
r=float(input("raio do tanque: "))
a=float(input("altura: "))
x=int(input("opcao: "))
v1=(4*pi*r**3)/3
v2= (pi * (a)**2 * (3*r-a))/3

if(x== 1):
	print(round(v2,4))
else:
	print(round(v1-v2,4))

-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:10:09) 
-- CODE:
from math import*
r=float(input("raio do tanque: "))
a=float(input("altura: "))
x=int(input("opcao: "))
v1=(4*pi*r**3)/3
v2= (pi * (a)**2 * (3*r-a))/3

if(x== 1):
	print(round(v2,4))
else:
	print(round(v1-v2,4))

-- EXECUTION TIME:
0.132645
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
